--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -4,8 +4,13 @@
     p.messenger_contend = comment.body
     p
       = link_to 'Destroy Comment', [comment.article, comment],
-                   method: :delete,
+                   method: :delete,remote: true , class: "destroy",
                    data: { confirm: 'Are you sure?' }
+javascript:
+	$('.destroy').bind('ajax:success',function(){
+		$(this).closest('.messenger_commeter').fadeOut();
+		console.log('ffds')
+	});
 
 / <div class="messenger_commeter">
 /   <div>
