--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -3,7 +3,8 @@
 // // //});
 // // 	$('#new_comment').submit('ajax:success', function(event){ 
 // //        event.preventDefault();
-// 		$("#comments_here").html("<% j (render @article.commesnts) %>");
+$("#comments_here").append("<% j (render partial: @article.commesnts) %>");
+
 // //     });	
 
 
